--- a/py_playground/algorithm/backtrace/24_game.ipynb
+++ b/py_playground/algorithm/backtrace/24_game.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 1
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "class Solution:\n",
@@ -65,9 +54,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.9 64-bit"
+   "display_name": "Python 3.8.9 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -79,10 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
-  },
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
