--- a/py_playground/algorithm/binary-search/findmin.ipynb
+++ b/py_playground/algorithm/binary-search/findmin.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1\n"
      ]
@@ -49,10 +49,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.2 64-bit",
    "language": "python",
-   "name": "python38264bit06109316d1fb426f94669b420a86bdac"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -64,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
