--- a/py_playground/datastructure/heap.ipynb
+++ b/py_playground/datastructure/heap.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1\n2\n3\n3\n4\n6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Heap:\n",
     "\n",
@@ -84,9 +76,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
+   "display_name": "Python 3.9.6 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -98,10 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  },
-  "interpreter": {
-   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
